--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron-forge start",
+    "dev": "electron-forge start --inspect-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
