--- a/package.json
+++ b/package.json
@@ -62,11 +62,11 @@
   "dependencies": {
     "98.css": "^0.1.16",
     "electron-squirrel-startup": "^1.0.0",
-    "postcss": "^8.1.4",
+    "postcss": "^8.2.6",
     "postcss-import": "^13.0.0",
     "postcss-inline": "^1.2.0",
     "postcss-inline-svg": "^5.0.0",
-    "postcss-loader": "^4.0.4"
+    "postcss-loader": "^4.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
@@ -75,6 +75,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "10.1.5",
-    "electron-builder": "^22.9.1"
+    "electron-builder": "^22.9.1",
+    "typewriter-effect": "^2.17.0"
   }
 }
