--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "10.1.5",
     "electron-builder": "^22.9.1",
-    "typewriter-effect": "^2.17.0"
+    "typewriter-effect": "^2.17.0",
+    "wikijs": "^6.0.1"
   }
 }
