--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     },
     "files": [
       "**/*",
-      "./buildResources/icon.png"
+      "./buildResources/icon.png",
+      "node_modules/**/*"
     ]
   },
   "scripts": {
@@ -76,7 +77,14 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "10.1.5",
     "electron-builder": "^22.9.1",
-    "typewriter-effect": "^2.17.0",
     "wikijs": "^6.0.1"
-  }
+  },
+  "files": [
+    "node_modules/**/*",
+    {
+      "from": "src",
+      "to": "build",
+      "filter": "**/*"
+    }
+  ]
 }
