--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "postcss-import": "^13.0.0",
     "postcss-inline": "^1.2.0",
     "postcss-inline-svg": "^5.0.0",
-    "postcss-loader": "^4.2.0"
+    "postcss-loader": "^4.2.0",
+    "wikijs": "^6.0.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
@@ -78,13 +79,5 @@
     "electron": "10.1.5",
     "electron-builder": "^22.9.1",
     "wikijs": "^6.0.1"
-  },
-  "files": [
-    "node_modules/**/*",
-    {
-      "from": "src",
-      "to": "build",
-      "filter": "**/*"
-    }
-  ]
+  }
 }
