--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "postcss-import": "^13.0.0",
     "postcss-inline": "^1.2.0",
     "postcss-inline-svg": "^5.0.0",
-    "postcss-loader": "^4.2.0",
-    "wikijs": "^6.0.1"
+    "postcss-loader": "^4.2.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
@@ -77,7 +76,6 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "10.1.5",
-    "electron-builder": "^22.9.1",
-    "wikijs": "^6.0.1"
+    "electron-builder": "^22.9.1"
   }
 }
