--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "utp-c",
-  "productName": "utp-c",
-  "version": "1.0.0",
-  "description": "My Electron application description",
+  "name": "encyclopaedia-mundi",
+  "productName": "Encyclopaedia Mundi",
+  "version": "0.618.0",
+  "description": "Concise digital knowledge repository",
   "main": "src/main.js",
   "build": {
     "appId": "com.utpc",
@@ -76,6 +76,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "10.1.5",
-    "electron-builder": "^22.9.1"
+    "electron-builder": "^22.9.1",
+    "is-reachable": "^5.0.0"
   }
 }
