--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "postcss-import": "^13.0.0",
     "postcss-inline": "^1.2.0",
     "postcss-inline-svg": "^5.0.0",
-    "postcss-loader": "^4.2.0"
+    "postcss-loader": "^4.2.0",
+    "is-reachable": "^5.0.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
